Fixed the alignment of the center column. Removed the clear button from the search bar

--- a/_neayiHeaderFooter.scss
+++ b/_neayiHeaderFooter.scss
@@ -334,6 +334,12 @@ div#neayi-searchform {
         }
     }
 
+    input[type="search"]::-webkit-search-cancel-button {
+
+        /* Remove default */
+        -webkit-appearance: none;
+    }
+
     span#searchform-close {
         position : absolute;
         right    : 20px;
