--- a/_pages_interieures.scss
+++ b/_pages_interieures.scss
@@ -1,6 +1,7 @@
 .mainContainer {
     .mw-body {
         max-width: 1100px;
+        margin   : 0 auto;
     }
 
     .leftSide {
@@ -33,6 +34,10 @@
         .toctitle {
             text-align: left;
             padding   : 0 0 0 20px;
+
+            h2 {
+                color: $darkPurple;
+            }
 
             a.page-views {
                 margin-left: 10px;
@@ -81,7 +86,7 @@
 
         div.tags {
             line-height: 20px;
-            margin-top: -9px;
+            margin-top : -9px;
         }
     }
 }
